--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Discord</title>
     <link rel="stylesheet" href="style.css">
+    <link href="http://fonts.cdnfonts.com/css/whitney-2" rel="stylesheet">
 </head>
 <body>
     <header class="center-block">
