New Try funzionante

--- a/index2.html
+++ b/index2.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Discord</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
+    <link rel="stylesheet" href="mystyle.css">
     <link href="http://fonts.cdnfonts.com/css/whitney-2" rel="stylesheet">
 </head>
 <body>
     <header class="center-block">
         <!-- container a cui dare 90% di larghezza -->
-        <div class="container-header" >
+        <div class="container clearfix" >
             
             <div id="logo">
                 <a href="#">
@@ -45,15 +46,11 @@
         </div>
     </header>
 
-    <section>
-        <div id="background-image">
-            <img src="img/jumbo.png" alt="">
+    <section id="jumbo">
+        <div class="jumbo-container">
+            <h1>Il tuo posto per parlare</h1>
+            <p>Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
+            <div class="download"><i class="fas fa-long-arrow-alt-down"></i>Scarica per Mac</div>
+            <div class="browser">Apri Discord sul tuo browser</div>
         </div>
-        <h2 id="slogan">Il tuo posto per parlare</h2>
     </section>
-
-    <main>
-
-    </main>
-</body>
-</html>
