Header e prima sezione fatti

--- a/index2.html
+++ b/index2.html
@@ -54,3 +54,47 @@
             <div class="browser">Apri Discord sul tuo browser</div>
         </div>
     </section>
+    <main>
+        <!-- sezione 1 -->
+        <section class="row">
+            <div class="server-image">
+                <img src="img/item1.svg" alt="">
+            </div>
+            <div class="server-title">
+                <h1>
+                    Un luogo a invito con tutto lo spazio necessario per parlare
+                </h1>
+                <p class="server-text">
+                    I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo
+                </p>
+            </div>
+        </section>
+        <!-- sezione 2 -->
+        <section class="row">
+            <div class="server-image">
+                <img src="img/item1.svg" alt="">
+            </div>
+            <div class="server-title">
+                <h1>
+                    Un luogo a invito con tutto lo spazio necessario per parlare
+                </h1>
+                <p class="server-text">
+                    I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo
+                </p>
+            </div>
+        </section>
+        <!-- sezione 3 -->
+        <section class="row">
+            <div class="server-image">
+                <img src="img/item1.svg" alt="">
+            </div>
+            <div class="server-title">
+                <h1>
+                    Un luogo a invito con tutto lo spazio necessario per parlare
+                </h1>
+                <p class="server-text">
+                    I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo
+                </p>
+            </div>
+        </section>
+    </main>
