Prima metà corretta

--- a/index2.html
+++ b/index2.html
@@ -70,31 +70,31 @@
             </div>
         </section>
         <!-- sezione 2 -->
-        <section class="row">
-            <div class="server-image">
-                <img src="img/item1.svg" alt="">
-            </div>
-            <div class="server-title">
+        <section class="row two">
+            <div class="server-title-left">
                 <h1>
-                    Un luogo a invito con tutto lo spazio necessario per parlare
+                    Dove trovarsi è facile  
                 </h1>
-                <p class="server-text">
+                <p class="server-text-left">
                     I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo
                 </p>
+            </div>
+            <div class="server-image-left">
+                <img src="img/item2.svg" alt="">
             </div>
         </section>
         <!-- sezione 3 -->
         <section class="row">
             <div class="server-image">
-                <img src="img/item1.svg" alt="">
+                <img src="img/item3.svg" alt="">
             </div>
-            <div class="server-title">
+            <div class="server-title three">
                 <h1>
-                    Un luogo a invito con tutto lo spazio necessario per parlare
+                    Da pochi a un fandom
                 </h1>
                 <p class="server-text">
-                    I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo
-                </p>
+                    Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati e molto altro.
+                </p>             
             </div>
         </section>
     </main>
