progetto quasi finito senza footer

--- a/index2.html
+++ b/index2.html
@@ -84,7 +84,7 @@
             </div>
         </section>
         <!-- sezione 3 -->
-        <section class="row">
+        <section class="row three">
             <div class="server-image">
                 <img src="img/item3.svg" alt="">
             </div>
@@ -97,4 +97,25 @@
                 </p>             
             </div>
         </section>
+        <!-- sezione 4 -->
+        <section class="row four">
+            <div class="server-title-four">
+                <h1>
+                    Tecnologia affidabile per tenersi in contatto 
+                </h1>
+                <p class="server-text-four">
+                    Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione di schermo.
+                </p>
+            </div>
+            <div class="server-image-four">
+                <img src="img/item4-big.svg" alt="">
+            </div>
+            <div>
+                <h1 id="stars">Pronto a iniziare la tua avventura?</h1>
+            </div>
+            <div class="download footer"><i class="fas fa-long-arrow-alt-down"></i>Scarica per Mac</div>
+        </section>
+        <footer>
+            
+        </footer>
     </main>
