--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </section>
         <main>
             <!-- sezione 1 -->
-            <section class="row">
+            <section class="row" style="padding-left: 170px;">
                 <div class="server-image">
                     <img src="img/item1.svg" alt="">
                 </div>
@@ -71,7 +71,7 @@
                 </div>
             </section>
             <!-- sezione 2 -->
-            <section class="row two">
+            <section class="row two" style="padding-left: 400px;">
                 <div class="server-title-left">
                     <h1>
                         Dove trovarsi è facile  
@@ -85,7 +85,7 @@
                 </div>
             </section>
             <!-- sezione 3 -->
-            <section class="row three">
+            <section class="row three" style="padding-left: 170px;">
                 <div class="server-image">
                     <img src="img/item3.svg" alt="">
                 </div>
@@ -117,7 +117,7 @@
                 <div class="download footer"><i class="fas fa-long-arrow-alt-down"></i>Scarica per Mac</div>
             </section>
 
-            <footer>
+            <footer style="text-align: center; display: flex; justify-content: center;">
               <div class="container-footer">
                   <div class="footer-clear clearfix">
                     <div class="footer-left">
